TestSuite/Verification/Error/Serial/Syntax/Control-Statement/ForLoopTest.par
ForLoopTest{

seq main() : Int {
    var Int a = 0
    for var Int i = 0; i < 20; i++ {
        a--
    }
    
return 0 
}}